==> ShearinZiw/GD32H7_FreeRTOS_emWin/GD32H7xx_GDemWin652/Sample/LCDConf/GUIDRV_Lin/RX65N/LCDConf.c <==
#include <stdlib.h>
#include "GUI.h"
#include "GUIDRV_Lin.h"
#include "LCDConf.h"
  #include "platform.h"
  #include "r_glcdc_rx_if.h"
  #include "r_pinset.h"
  #include "r_dmaca_rx_if.h"
  #include "iorx65n.h"
#include "dave_base.h"
#include "dave_videomodes.h"
#include "dave_driver.h"
#define XSIZE_PHYS 480
#define YSIZE_PHYS 272
#define BITS_PER_PIXEL 16  // Allowed values: 1, 4, 8, 16, 32
#define FORMAT_RGB_565   (GLCDC_IN_FORMAT_16BITS_RGB565)
#define FORMAT_RGB_888   (GLCDC_IN_FORMAT_32BITS_RGB888)
#define FORMAT_ARGB_1555 (GLCDC_IN_FORMAT_16BITS_ARGB1555)
#define FORMAT_ARGB_4444 (GLCDC_IN_FORMAT_16BITS_ARGB4444)
#define FORMAT_ARGB_8888 (GLCDC_IN_FORMAT_32BITS_ARGB8888)
#define FORMAT_CLUT_8    (GLCDC_IN_FORMAT_CLUT8)
#define FORMAT_CLUT_4    (GLCDC_IN_FORMAT_CLUT4)
#define FORMAT_CLUT_1    (GLCDC_IN_FORMAT_CLUT1)
#define ORIENTATION_0    0
#define ORIENTATION_CW   1
#define ORIENTATION_180  2
#define ORIENTATION_CCW  3
#define DISPLAY_ORIENTATION  ORIENTATION_0
  #define COLOR_CONVERSION GUICC_M8888I
  #define DISPLAY_DRIVER   GUIDRV_LIN_32      // Default
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSX_32  // CW
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSY_32  // CCW
  #define DISPLAY_DRIVER   GUIDRV_LIN_OXY_32  // 180
  #define NUM_BUFFERS      1
#define COLOR_FORMAT     FORMAT_RGB_ARGB8888
  #define COLOR_CONVERSION GUICC_M565
  #define DISPLAY_DRIVER   GUIDRV_LIN_16      // Default
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSX_16  // CW

static void _SwitchBuffersOnVSYNC(int Index) {
  U32 Addr;
  glcdc_err_t ret;

  for (_PendingBuffer = 1; _PendingBuffer; );  // Wait until _PendingBuffer is cleared by ISR
  Addr = _aBufferPTR[Index];
  runtime_cfg.input.p_base = (uint32_t *)Addr; // Specify the start address of the frame buffer
  ret = R_GLCDC_LayerChange(GLCDC_FRAME_LAYER_2, &runtime_cfg);	// Graphic 2 Register Value Reflection Enable
  if (ret == GLCDC_SUCCESS) {
    GUI_MULTIBUF_ConfirmEx(0, Index);  // Tell emWin that buffer is used
  } else {
    //
    // You should not end up here. Buffer change has failed, check "ret" to get further information
    // or add code to debug the issue.
    //
  }
}

static void _SetLUTEntry(LCD_COLOR Color, U8 Pos) {
#if (BITS_PER_PIXEL < 16)
glcdc_clut_cfg_t p_clut_cfg;
  int err;

  _aClut[Pos] = Color;
  if (Pos == NUM_COLORS - 1) {
    p_clut_cfg.enable = true;
    p_clut_cfg.p_base = _aClut;
    p_clut_cfg.size = NUM_COLORS;
    p_clut_cfg.start = 0;
    R_GLCDC_Control(GLCDC_CMD_START_DISPLAY, FIT_NO_FUNC);  // Enable background generation block
    GUI_Delay(100);
    err = R_GLCDC_ClutUpdate(GLCDC_FRAME_LAYER_2, &p_clut_cfg);
    if (err != GLCDC_SUCCESS) {
      while(1);
    }
  }
#else
  GUI_USE_PARA(Color);
  GUI_USE_PARA(Pos);
#endif
}

static int _CircleAA(int x0, int y0, int r, int w) {
  U32 Mode;
  int ret;
  GUI_RECT Rect;
  U32 Color;

  Mode = _GetD2Mode();
  //
  // Generate render operations
  //
  d2_framebuffer(d2_handle, (void *)_aBufferPTR[_WriteBufferIndex], XSIZE_PHYS, XSIZE_PHYS, YSIZE_PHYS, Mode);
  d2_selectrenderbuffer(d2_handle, renderbuffer);
  Color = GUI_Index2Color(GUI_GetColorIndex());
  d2_setcolor(d2_handle, 0, Color);
  _ModifyRect(GUI__GetClipRect(), &Rect);
  d2_cliprect(d2_handle, Rect.x0, Rect.y0, Rect.x1, Rect.y1);
  ret = d2_rendercircle(d2_handle, x0 * 16, y0 * 16, r * 16, w * 16);
  //
  // Execute render operations
  //
  d2_executerenderbuffer(d2_handle, renderbuffer, 0);
  d2_flushframe(d2_handle);
  return ret;
}

static int _DrawLineAA(int x0, int y0, int x1, int y1) {
  U32 Mode;
  int ret;
  U32 Color;
  GUI_RECT Rect;

  Mode = _GetD2Mode();
  _ModifyCoord(&x0, &y0);
  _ModifyCoord(&x1, &y1);
  //
  // Generate render operations
  //
  d2_framebuffer(d2_handle, (void *)_aBufferPTR[_WriteBufferIndex], XSIZE_PHYS, XSIZE_PHYS, YSIZE_PHYS, Mode);
  d2_selectrenderbuffer(d2_handle, renderbuffer);
  Color = GUI_Index2Color(GUI_GetColorIndex());
  d2_setcolor(d2_handle, 0, Color);
  _ModifyRect(GUI__GetClipRect(), &Rect);
  d2_cliprect(d2_handle, Rect.x0, Rect.y0, Rect.x1, Rect.y1);
  ret = d2_renderline(d2_handle, x0 * 16, y0 * 16, x1 * 16, y1 * 16, GUI_GetPenSize() * 16, d2_le_exclude_none);
  //
  // Execute render operations
  //
  d2_executerenderbuffer(d2_handle, renderbuffer, 0);
  d2_flushframe(d2_handle);
  return ret;
}

int _DrawArcAA(int x0, int y0, int rx, int ry, int a0, int a1) {
  U32 Mode;
  int ret;
  I32 nx0, ny0, nx1, ny1;
  GUI_RECT Rect;
  U32 Color;
  U32 Flag;

  GUI_USE_PARA(ry);
  //
  // If both angles are equal (e.g. 0 and 0 or 180 and 180) nothing has to be done
  //
  if (a0 == a1) {
    return 0;  // Nothing to do, no angle - no arc
  }
  if (a1 < a0) {
    return 0;  // Nothing to do, emWin doesn't support this one
  }
  //
  // If the angles not equal, but meet at the same position
  // we don't draw an arc but a circle instead.
  //
  if (a1 > (a0 + 360000)) {
    return _DrawCircleAA(x0, y0, rx);  // a1 meets a0 after one round so we have a circle
  }
  if ((a0 % 360000) == (a1 % 360000)) {
    return _DrawCircleAA(x0, y0, rx);  // Both angles are at the same position but not equal, so we have a circle
  }

  Mode = _GetD2Mode();
  _ModifyCoord(&x0, &y0);
  nx0  = -GUI__SinHQ(a0);
  ny0  = -GUI__CosHQ(a0);
  nx1  = GUI__SinHQ(a1);
  ny1  = GUI__CosHQ(a1);
  //
  // If the difference between both is larger than 180 degrees we must use the concave flag
  //
  if (((a1 - a0) % 360000) <= 180000) {
    Flag = 0;
  } else {
    Flag = d2_wf_concave;
  }
  //
  // Generate render operations
  //
  d2_framebuffer(d2_handle, (void *)_aBufferPTR[_WriteBufferIndex], XSIZE_PHYS, XSIZE_PHYS, YSIZE_PHYS, Mode);
  d2_selectrenderbuffer(d2_handle, renderbuffer);
  Color = GUI_Index2Color(GUI_GetColorIndex());
  d2_setcolor(d2_handle, 0, Color);
  _ModifyRect(GUI__GetClipRect(), &Rect);
  d2_cliprect(d2_handle, Rect.x0, Rect.y0, Rect.x1, Rect.y1);
  ret = d2_renderwedge(d2_handle, x0 * 16, y0 * 16, rx * 16, GUI_GetPenSize() * 16, nx0, ny0, nx1, ny1, Flag);
  //
  // Execute render operations
  //
  d2_executerenderbuffer(d2_handle, renderbuffer, 0);
  d2_flushframe(d2_handle);
  return ret;
}

void LCD_X_Config(void) {
  static const U32 _aBufferPTRGUI[] = {
    BUFFER_ADDR_0 - MEMORY_OFFSET,
	BUFFER_ADDR_1 - MEMORY_OFFSET
  };

  #if (NUM_BUFFERS > 1)
  GUI_MULTIBUF_ConfigEx(0, NUM_BUFFERS);
  #endif
  //
  // Set display driver and color conversion for 1st layer
  //
  GUI_DEVICE_CreateAndLink(DISPLAY_DRIVER, COLOR_CONVERSION, 0, 0);
  //
  // Display driver configuration
  //
  if (LCD_GetSwapXYEx(0)) {
    LCD_SetSizeEx (0, YSIZE_PHYS, XSIZE_PHYS);
    LCD_SetVSizeEx(0, YSIZE_PHYS, VXSIZE_PHYS);
  } else {
    LCD_SetSizeEx (0, XSIZE_PHYS, YSIZE_PHYS);
    LCD_SetVSizeEx(0, VXSIZE_PHYS, YSIZE_PHYS);
  }
  LCD_SetBufferPtrEx(0, (void **)_aBufferPTRGUI);
  //
  // Initialize Dave2D
  //
  d2_handle = d2_opendevice(0);
  d2_inithw(d2_handle, 0);
  renderbuffer = d2_newrenderbuffer(d2_handle, 20, 20);
  //
  // Set function pointers
  //
  LCD_SetDevFunc(0, LCD_DEVFUNC_COPYBUFFER, (void(*)(void))_CopyBuffer);
}

int LCD_X_DisplayDriver(unsigned LayerIndex, unsigned Cmd, void * pData) {
  int r;

  GUI_USE_PARA(LayerIndex);
  switch (Cmd) {
  //
  // Required
  //
  case LCD_X_INITCONTROLLER: {
    //
    // Called during the initialization process in order to set up the
    // display controller and put it into operation. If the display
    // controller is not initialized by any external routine this needs
    // to be adapted by the customer...
    //
    _InitController();
#if (USE_DAVE2D)
      LCDCONF_EnableDave2D();
#endif
    return 0;
  }
  case LCD_X_SETLUTENTRY: {
    //
    // Required for setting a lookup table entry which is passed in the 'Pos' and 'Color' element of p
    //
    LCD_X_SETLUTENTRY_INFO * p;

    p = (LCD_X_SETLUTENTRY_INFO *)pData;
    _SetLUTEntry(p->Color, p->Pos);
    return 0;
  }
  case LCD_X_SHOWBUFFER: {
    //
    // Required if multiple buffers are used. The 'Index' element of p contains the buffer index.
    //
    LCD_X_SHOWBUFFER_INFO * p;

    p = (LCD_X_SHOWBUFFER_INFO *)pData;
    _SwitchBuffersOnVSYNC(p->Index);
    break;
  }
  case LCD_X_ON: {
    //
    // Required if the display controller should support switching on and off
    //
    _DisplayOnOff(1);
    break;
  }
  case LCD_X_OFF: {
    //
    // Required if the display controller should support switching on and off
    //
    _DisplayOnOff(0);
    break;
  }
  default:
    r = -1;
  }
  return r;
}
