==> ShearinZiw/GD32H7_FreeRTOS_emWin/GD32H7xx_GDemWin652/Sample/LCDConf/GUIDRV_Lin/EK_RA6M3G/LCDConf.c <==
#include "gpx_thread.h"
#include "bsp_pin_cfg.h"
#include "graphics.h"
#include "GUI.h"
#include "GUIDRV_Lin.h"
#include "LCDConf.h"
#include "GUI_Private.h"
#include <stdlib.h>
#include <string.h>
#define XSIZE_PHYS LCD_HPIX
#define YSIZE_PHYS LCD_VPIX
#define BITS_PER_PIXEL DISPLAY_BITS_PER_PIXEL_INPUT0  // Allowed values: 1, 4, 8, 16, 32
#define ORIENTATION_0    0
#define ORIENTATION_CW   1
#define ORIENTATION_180  2
#define ORIENTATION_CCW  3
#define DISPLAY_ORIENTATION  ORIENTATION_0
  #define COLOR_CONVERSION GUICC_M8888I
  #define DISPLAY_DRIVER   GUIDRV_LIN_32      // Default
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSX_32  // CW
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSY_32  // CCW
  #define DISPLAY_DRIVER   GUIDRV_LIN_OXY_32  // 180
  #define NUM_BUFFERS      1
  #define COLOR_CONVERSION GUICC_M565
  #define DISPLAY_DRIVER   GUIDRV_LIN_16      // Default
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSX_16  // CW
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSY_16  // CCW
  #define DISPLAY_DRIVER   GUIDRV_LIN_OXY_16  // 180
  #define NUM_BUFFERS      2
  #define COLOR_CONVERSION GUICC_M233
  #define DISPLAY_DRIVER   GUIDRV_LIN_8      // Default
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSX_8  // CW
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSY_8  // CCW
  #define DISPLAY_DRIVER   GUIDRV_LIN_OXY_8  // 180
  #define NUM_BUFFERS      2
  #define COLOR_CONVERSION GUICC_16
  #define DISPLAY_DRIVER   GUIDRV_LIN_4      // Default
  #define DISPLAY_DRIVER   GUIDRV_LIN_OSX_4  // CW

static void _SwitchBuffersOnVSYNC(int Index) {
#if USE_FLAG_FOR_MB
  TimeA = GUI_GetTime();
  _PendingBuffer = 1;
  while (_PendingBuffer);
#else
  xSemaphoreTake(g_vsync_semaphore, portMAX_DELAY);
#endif
  TimeD = GUI_GetTime() - TimeA;
  R_GLCDC_BufferChange(g_display0.p_ctrl, fb_background[Index], 0);
  GUI_MULTIBUF_ConfirmEx(0, Index);  // Tell emWin that buffer is used
}

static void _SetLUTEntry(LCD_COLOR Color, U8 Pos) {
#if (BITS_PER_PIXEL < 16)
  display_clut_cfg_t p_clut_cfg;
  int err;

  _aClut[Pos] = Color;
  if (Pos == NUM_COLORS - 1) {
    p_clut_cfg.p_base = _aClut;
    p_clut_cfg.size   = NUM_COLORS;
    p_clut_cfg.start  = 0;
    GUI_Delay(100);
    err = R_GLCDC_ClutUpdate(g_display0.p_ctrl, &p_clut_cfg, DISPLAY_FRAME_LAYER_1);
    if (err != FSP_SUCCESS) {
      while(1);
    }
  }
#else
  GUI_USE_PARA(Color);
  GUI_USE_PARA(Pos);
#endif
}

static int _CircleAA(int x0, int y0, int r, int w) {
  U32      Mode;
  int      ret;
  d2_color Color;
  GUI_RECT Rect;

  Mode = _GetD2Mode();
  //
  // Generate render operations
  //
  d2_framebuffer(d2_handle, (void *)_aBufferAddress[_WriteBufferIndex], XSIZE_PHYS, XSIZE_PHYS, YSIZE_PHYS, Mode);
  d2_selectrenderbuffer(d2_handle, renderbuffer);
  Color = GUI_GetColor();
  d2_setcolor(d2_handle, 0, Color);
  _ModifyRect(GUI__GetClipRect(), &Rect);
  d2_cliprect(d2_handle, Rect.x0, Rect.y0, Rect.x1, Rect.y1);
  ret = d2_rendercircle(d2_handle, x0 * 16, y0 * 16, r * 16, w * 16);
  //
  // Execute render operations
  //
  d2_executerenderbuffer(d2_handle, renderbuffer, 0);
  d2_flushframe(d2_handle);
  while (d2_commandspending(d2_handle));
  return ret;
}

static int _DrawLineAA(int x0, int y0, int x1, int y1) {
  U32      Mode;
  int      ret;
  d2_color Color;
  GUI_RECT Rect;
  U16      PenSize;

  Mode    = _GetD2Mode();
  PenSize = GUI_GetPenSize();
  //
  // Generate render operations
  //
  d2_framebuffer(d2_handle, (void *)_aBufferAddress[_WriteBufferIndex], XSIZE_PHYS, XSIZE_PHYS, YSIZE_PHYS, Mode);
  d2_selectrenderbuffer(d2_handle, renderbuffer);
  Color = GUI_GetColor();
  d2_setcolor(d2_handle, 0, Color);
  _ModifyRect(GUI_GetClipRect(), &Rect);
  d2_cliprect(d2_handle, Rect.x0, Rect.y0, Rect.x1, Rect.y1);
  ret = d2_renderline(d2_handle, x0 * 16, y0 * 16, x1 * 16, y1 * 16, PenSize * 16, d2_le_exclude_none);
  //
  // Execute render operations
  //
  d2_executerenderbuffer(d2_handle, renderbuffer, 0);
  d2_flushframe(d2_handle);
  return ret;
}

static int _DrawArcAA(int x0, int y0, int rx, int ry, int a0, int a1) {
  U32      Mode;
  int      ret;
  I32      nx0;
  I32      ny0;
  I32      nx1;
  I32      ny1;
  d2_color Color;
  GUI_RECT Rect;
  U16      PenSize;

  GUI_USE_PARA(ry);
  PenSize = GUI_GetPenSize();
  Mode = _GetD2Mode();
  while (a1 < a0) {
    a1 += 360000;
  }
  nx0  = GUI__SinHQ(a0);
  ny0  = GUI__CosHQ(a0);
  nx1  = GUI__SinHQ(a1);
  ny1  = GUI__CosHQ(a1);
  if ((a1 - a0) <= 180000) {
    nx0 *= -1;
    ny0 *= -1;
  }
  //
  // Generate render operations
  //
  d2_framebuffer(d2_handle, (void *)_aBufferAddress[_WriteBufferIndex], XSIZE_PHYS, XSIZE_PHYS, YSIZE_PHYS, Mode);
  d2_selectrenderbuffer(d2_handle, renderbuffer);
  Color = GUI_GetColor();
  d2_setcolor(d2_handle, 0, Color);
  _ModifyRect(GUI_GetClipRect(), &Rect);
  d2_cliprect(d2_handle, Rect.x0, Rect.y0, Rect.x1, Rect.y1);
  ret = d2_renderwedge(d2_handle, x0 * 16, y0 * 16, rx * 16, PenSize * 16, nx0, ny0, nx1, ny1, 0);
  //
  // Execute render operations
  //
  d2_executerenderbuffer(d2_handle, renderbuffer, 0);
  d2_flushframe(d2_handle);
  return ret;
}

void LCD_X_Config(void) {
#if (NUM_BUFFERS > 1)
  GUI_MULTIBUF_ConfigEx(0, NUM_BUFFERS);
#endif
  //
  // Set display driver and color conversion for 1st layer
  //
  GUI_DEVICE_CreateAndLink(DISPLAY_DRIVER, COLOR_CONVERSION, 0, 0);
  //
  // Display driver configuration
  //
  if (LCD_GetSwapXY()) {
    LCD_SetSizeEx (0, YSIZE_PHYS, XSIZE_PHYS);
    LCD_SetVSizeEx(0, YSIZE_PHYS, g_display0.p_cfg->input->hstride);
  } else {
    LCD_SetSizeEx (0, XSIZE_PHYS, YSIZE_PHYS);
    LCD_SetVSizeEx(0, g_display0.p_cfg->input->hstride, YSIZE_PHYS);
  }
  LCD_SetVRAMAddrEx(0, VRAM_ADDR);
  //
  // Set user palette data (only required if no fixed palette is used)
  //
  #if defined(PALETTE)
    LCD_SetLUTEx(0, PALETTE);
  #endif
  renderbuffer = d2_newrenderbuffer(d2_handle, 20, 20);
  LCD_SetDevFunc(0, LCD_DEVFUNC_COPYBUFFER, (void(*)(void))_CopyBuffer);
  LCDCONF_EnableDave2D();
}

int LCD_X_DisplayDriver(unsigned LayerIndex, unsigned Cmd, void * pData) {
  int r;

  GUI_USE_PARA(LayerIndex);
  switch (Cmd) {
  //
  // Required
  //
  case LCD_X_INITCONTROLLER: {
    //
    // Controller initialiiation is done before calling GUI_Init() so we simply store the frame buffer addresses
    //
    _FB_BufferSize = sizeof(fb_background[0]);
    _aBufferAddress[0] = (U32)fb_background[0];
#if (NUM_BUFFERS > 1)
    _aBufferAddress[1] = (U32)fb_background[1];
#endif
    return 0;
  }
  case LCD_X_SHOWBUFFER: {
    //
    // Required if multiple buffers are used. The 'Index' element of p contains the buffer index.
    //
    LCD_X_SHOWBUFFER_INFO * p;

    p = (LCD_X_SHOWBUFFER_INFO *)pData;
#if (NUM_BUFFERS == 2)
    _SwitchBuffersOnVSYNC(p->Index);
#else
    //_PendingBuffer = p->Index;
#endif
    return 0;
  }
  case LCD_X_SETLUTENTRY: {
    //
    // Required for setting a lookup table entry which is passed in the 'Pos' and 'Color' element of p
    //
    LCD_X_SETLUTENTRY_INFO * p;
    p = (LCD_X_SETLUTENTRY_INFO *)pData;
    _SetLUTEntry(p->Color, p->Pos);
    return 0;
  }
  case LCD_X_ON: {
    //
    // Required if the display controller should support switching on and off
    //
    return 0;
  }
  case LCD_X_OFF: {
    //
    // Required if the display controller should support switching on and off
    //
    // ...
    return 0;
  }
  default:
    r = -1;
  }
  return r;
}
